change part Quickstart in README.md